# 인증시스템 유효성 검사 1차 완료 커밋 외 1. 회원가입 및 로그인 기능/유효성 검사(1차) 완료 2. include 파일 임포트 정리 3. custom.css 파일 수정 4. account 관련 Modal 수정 및 javascript 생성

--- a/FarmStory/src/main/webapp/resources/assets/css/custom.css
+++ b/FarmStory/src/main/webapp/resources/assets/css/custom.css
@@ -3,3 +3,75 @@
 /*===================================================================================*/
 
 /* Insert your own styles in here! */
+
+/* ==== Header : Start ============================= */
+
+#welcome {
+	font-size: 14px;
+	padding-top: 10px;
+}
+
+/* ==== Header : End ============================= */
+
+/* ==== Register & Login & Logout Modal : Start ============================= */
+
+.modal-header {
+	border-top: 6px solid #3F8DBF;
+	border-top-left-radius: 6px;
+	border-top-right-radius: 6px;
+	border-bottom: 0;
+	padding: 10px 20px;
+}
+
+.form-group {
+	padding: 0 18px;
+	border-color: #e5e5e5;
+	box-shadow: none;
+}
+
+.modal-footer {
+	padding: 10px 0px;
+	border-top: 0;
+	text-align: center;
+}
+
+.modal-dialog {
+	width: 350px;
+	height: 600px;
+}
+
+.modal-body {
+	padding: 10px 20px;
+}
+
+.btn-default {
+	width: 100%;
+	background-color: #3F8DBF;
+	border: none;
+	color: #fff;
+	margin-top: 3px;
+}
+
+.modalChange {
+	font-size: 15px;
+}
+
+/* --- Login Modal Custom --- */
+#modal-dialog-login {
+	width: 350px;
+	height: 380px;
+}
+
+/* --- Logout Modal Custom --- */
+#modal-dialog-logout {
+	width: 350px;
+	height: 230px;
+}
+
+/* --- Login Check Modal Custom --- */
+#modal-dialog-login-checkId, #modal-dialog-login-checkPw {
+	width: 350px;
+	height: 210px;
+}
+
+/* ==== Register & Login & Logout Modal : End ============================= */
