--- a/FarmStory/src/main/webapp/resources/assets/css/custom.css
+++ b/FarmStory/src/main/webapp/resources/assets/css/custom.css
@@ -4,6 +4,19 @@
 
 /* Insert your own styles in here! */
 
+/* ==== Fonts-NotoSansKR : Start ============================= */
+
+@import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
+.notoSansKR { font: 24px/30px 'Noto Sans KR', sans-serif; }
+.thin       { font-weight: 100 }
+.light      { font-weight: 300 }
+.regular    { font-weight: 400 }
+.medium     { font-weight: 500 }
+.bold       { font-weight: 700 }
+.bolder     { font-weight: 900 }
+
+/* ==== Fonts-NotoSansKR : End ============================= */
+
 /* ==== Header : Start ============================= */
 
 #welcome {
@@ -11,6 +24,9 @@
 	padding-top: 10px;
 }
 
+#header-meun-bar {
+	font-size: 10px;
+}
 /* ==== Header : End ============================= */
 
 /* ==== Register & Login & Logout Modal : Start ============================= */
