# 메인 페이지 및 로고 수정 외 1. 메인 페이지 및 로고 이미지 수정 2. 로그인 인터셉터 수정
-by och

--- a/FarmStory/src/main/webapp/resources/assets/css/custom.css
+++ b/FarmStory/src/main/webapp/resources/assets/css/custom.css
@@ -46,11 +46,12 @@
 #header-meun-bar {
 	font-size: 10px;
 }
+
 /* ==== Header : End ============================= */
 
 /* ==== Register & Login & Logout Modal : Start ============================= */
 .modal-header {
-	border-top: 6px solid #3F8DBF;
+	border-top: 6px solid #7abb29;
 	border-top-left-radius: 6px;
 	border-top-right-radius: 6px;
 	border-bottom: 0;
@@ -80,7 +81,7 @@
 
 .btn-default {
 	width: 100%;
-	background-color: #3F8DBF;
+	background-color: #7abb29;
 	border: none;
 	color: #fff;
 	margin-top: 3px;
