# 화분 등록 목록 표시하기 외 1. 나의 화분 등록 목록 표시 2. 메인 이미지 페이지 수정
-by och

--- a/FarmStory/src/main/webapp/resources/assets/css/farmstory.css
+++ b/FarmStory/src/main/webapp/resources/assets/css/farmstory.css
@@ -72,7 +72,7 @@ ul.circled li:before,
 .pagination > .active > span:hover,
 .pagination > li > a:hover,
 .pagination > li > a:focus {
-	background-color: #38AB3A;
+	background-color: #5FB404;
 }
 
 .icon-overlay a .icn-more,
