# 화분 등록 및 공지사항 부분 페이지 커밋
-by och

--- a/FarmStory/src/main/webapp/resources/assets/css/custom.css
+++ b/FarmStory/src/main/webapp/resources/assets/css/custom.css
@@ -4,15 +4,13 @@
 
 /* Insert your own styles in here! */
 
-/* ==== Fonts-NotoSansKR : Start ============================= */
+/* ==== Fonts-Godo : Start ============================= */
 
 body, main, h1, h2, h4, .btn{
 	font-family: 'godoM';
 }
 
-/* ==== Fonts-NotoSansKR : End ============================= */
-
-
+/* ==== Fonts-Godo : End ============================= */
 
 /* ==== Header : Start ============================= */
 #welcome {
